[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/HyperspaceBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Background2" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Score" type="Label" parent="."]
margin_left = 10.0
margin_right = 210.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Score: "
valign = 1

[node name="Time" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -210.0
margin_right = -10.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Time Remaining: "
align = 2
valign = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Health" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 100.0
custom_fonts/font = SubResource( 1 )
text = "Health:"
align = 2
valign = 1

[node name="HealthBarFull" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 110.0
margin_top = -30.0
margin_right = 310.0
margin_bottom = -10.0
color = Color( 0, 0, 0, 0.498039 )

[node name="HealthBarPartial" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 110.0
margin_top = -30.0
margin_right = 160.0
margin_bottom = -10.0
color = Color( 1, 0, 0, 0.498039 )

[node name="Cooldown" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -387.0
margin_top = -40.0
margin_right = -220.0
custom_fonts/font = SubResource( 1 )
text = "Weapon Cooldown:"
align = 2
valign = 1

[node name="CooldownBarFull" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -30.0
margin_right = -10.0
margin_bottom = -10.0
color = Color( 0, 0, 0, 0.498039 )

[node name="CooldownBarPartial" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -30.0
margin_right = -160.0
margin_bottom = -10.0
color = Color( 1, 0, 0, 0.498039 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
